--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -18,82 +18,96 @@
         android:layout_centerHorizontal="true">
 
         <EditText
+            android:id="@+id/nameEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Name"
-            android:ems="8"
-            android:id="@+id/nameEditText"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_marginRight="16dp" />
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="16dp"
+            android:ems="8"
+            android:hint="Name"
+            android:inputType="textPersonName" />
 
         <EditText
+            android:id="@+id/idEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="3"
-            android:id="@+id/idEditText"
             android:layout_alignBottom="@+id/nameEditText"
             android:layout_toEndOf="@+id/nameEditText"
-            android:hint="ID" />
+            android:ems="3"
+            android:hint="ID"
+            android:inputType="number" />
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/ageEditText"
-            android:ems="5"
-            android:layout_below="@+id/nameEditText"
-            android:layout_alignParentStart="true"
-            android:inputType="number"
-            android:hint="Age"
-            android:layout_marginRight="16dp" />
-
-        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/sexEditText"
-            android:ems="5"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/nameEditText"
-            android:layout_toEndOf="@+id/ageEditText"
-            android:hint="Sex" />
+            android:layout_marginRight="16dp"
+            android:ems="5"
+            android:hint="Age"
+            android:inputType="number" />
 
         <Button
+            android:id="@+id/submitInputBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create Database"
-            android:id="@+id/submitInputBtn"
             android:layout_below="@+id/ageEditText"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:text="Create Database" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sex_radio_group"
+            android:layout_alignBottom="@+id/ageEditText"
+            android:layout_toEndOf="@+id/ageEditText"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/male_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Male" />
+            <RadioButton
+                android:id="@+id/female_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="Female" />
+        </RadioGroup>
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/graph_layout"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/input_layout"
-        android:weightSum="10"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:weightSum="10">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="RUN"
                 android:id="@+id/run_button"
-                android:layout_alignParentLeft="true" />
-            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="STOP"
+                android:layout_alignParentLeft="true"
+                android:text="RUN" />
+
+            <Button
                 android:id="@+id/stop_button"
-                android:layout_alignParentRight="true" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="STOP" />
         </RelativeLayout>
     </LinearLayout>
 
