--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,9 +58,9 @@
             android:text="Create Database" />
 
         <RadioGroup
+            android:id="@+id/sex_radio_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/sex_radio_group"
             android:layout_alignBottom="@+id/ageEditText"
             android:layout_toEndOf="@+id/ageEditText"
             android:orientation="horizontal">
@@ -71,6 +71,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Male" />
+
             <RadioButton
                 android:id="@+id/female_radio"
                 android:layout_width="wrap_content"
@@ -109,6 +110,21 @@
                 android:layout_alignParentRight="true"
                 android:text="STOP" />
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/server_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/upload_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload Database" />
+        </RelativeLayout>
     </LinearLayout>
+
 
 </LinearLayout>
